# gfx_pbr

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini
shaders/: deferred_shading.frag  deferred_shading.vert  gpu.hlsli  ibl.comp  object.frag  object.vert  pbr_lighting.frag  pbr_lighting.vert  scene_composite.frag  scene_composite.vert  sky.comp  sky.frag  sky.vert  triangle.frag  triangle.vert
src/: Timer.h  camera.cpp  camera.h  compute_triangle.cpp  gpu_shared.h  main.cpp
